# digital-enterprise-twin

./: .agents.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  manifest  mcp.json  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  nightly_release.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  BUSINESS_WORLD_DEMO.md  DEMO_SCRIPT_CEO.md  ENRON_BUSINESS_OUTCOME_BENCHMARK.md  EVALS.md  NEXT_PHASE_PLAN.md  OVERVIEW.md  PAPERCLIP_CONTROL_ROOM_REPORT.md  PRESENTATION_TALK_TRACK.md  SDK_ALPHA_CONTRACT.md  SERVICE_OPS_WALKTHROUGH.md  WHATIF.md  det_phases_0_6_architecture.md  roadmap.md  simulation_rl_plan.md
examples/: pilot_client.py  sdk_playground_min.py
scripts/: capture_ui_docs.py  mypy_targets.txt  package_enron_master_agreement_example.py  prepare_enron_public_context.py  resolve_llm_live_defaults.py  run_mypy_targets.py  validate_llm_live_metrics.py
tests/: README.md  test_behavior_tree_wait.py  test_bench_and_surfaces.py  test_benchmark_api.py  test_blueprint_api.py  test_business_world_demo.py  test_capability_graph_api.py  test_connectors_runtime.py  test_context_diff.py  test_context_hydrate.py  test_context_providers.py  test_contract_api.py  test_contract_assertions.py  test_control_plane_twins.py  test_corpus_quality.py  test_data_models.py  test_dataset_api.py  test_doctor_cli.py  test_drift_engine.py  test_dynamic_scenarios.py  test_ejepa_runtime_contract.py  test_enron_example_bundle.py  test_enron_public_context_fixture.py  test_exercise_api.py  test_facade_plugins.py  test_faults_and_world_api.py  test_fidelity_api.py  test_fidelity_vertical.py  test_imports_api.py  test_lazy_imports.py  test_llm_google_provider.py  test_llm_harness.py  test_llm_live_validator.py  test_llm_providers.py  test_llm_stdio_smoke.py  test_mcp_discoverability_tools.py  test_monitors.py  test_orchestrators_api.py  test_pilot_api.py  test_playable.py  (+53 more)
tools/: git_dependency_smoke.sh
vei/: config.py  llm_live_validator.py  project_settings.py  score_common.py  score_core.py  score_frontier.py
vei/anonymize/: __init__.py  primitives.py
vei/behavior/: memory.py  policy.py  tree.py
vei/benchmark/: __init__.py  api.py  dimensions.py  families.py  models.py  workflow_catalog.py  workflow_models.py  workflows.py
vei/blueprint/: __init__.py  _plugin_builtins.py  _plugin_registry.py  _plugin_state_hooks.py  _plugin_types.py  api.py  llm_generate.py  models.py  plugins.py  scaffold.py
vei/capability_graph/: __init__.py  api.py  models.py
vei/cli/: _lazy.py  _llm_loop.py  vei.py  vei_blueprint.py  vei_build_scenario.py  vei_chat.py  vei_context.py  vei_contract.py  vei_dataset.py  vei_demo.py  vei_det_pipeline.py  vei_doctor.py  vei_eval.py  vei_eval_frontier.py  vei_exercise.py  vei_export.py  vei_inspect.py  vei_llm_test.py  vei_pack.py  vei_pilot.py  vei_project.py  vei_quickstart.py  vei_release.py  vei_report.py  vei_rollout.py  vei_run.py  vei_scenario.py  vei_scenarios.py  vei_score.py  vei_score_crm.py  vei_score_erp.py  (+11 more)
(+250 files in other folders)
