[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vei"
version = "0.2.0a1"
description = "VEI — programmable replica of an enterprise software stack for agent testing, RL training, and operational simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "VEI", email = "noreply@example.com" }
]
dependencies = [
  "mcp>=1.13.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "fastapi>=0.115.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0"
]
sse = [
  "uvicorn>=0.30.0"
]
ui = [
  "uvicorn>=0.30.0"
]
llm = [
  "openai>=1.55.0",
  "python-dotenv>=1.0.0",
  "openai-agents>=0.2.0",
  "anthropic>=0.34.0",
  "google-genai>=0.3.0",
  "llm>=0.15",            # optional: alternative engine
  "llm-openai-plugin>=0.1.0",    # optional plugin for specific API
  "llm-anthropic>=0.1.0",        # official plugin
  "llm-gemini>=0.1.0",           # official plugin for Google
]
rl = [
  "gymnasium>=0.29.0"
]
test = [
    "pytest>=8.3.2",
    "pytest-timeout>=2.3.1",
]

[project.scripts]
vei = "vei.cli.vei:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["vei*"]
exclude = []

[tool.setuptools.package-data]
"vei.ui" = ["static/*.html", "static/*.css", "static/*.js", "static/*.svg"]
"vei.imports" = ["fixtures/*/package.json", "fixtures/*/raw/*.csv", "fixtures/*/raw/*.json"]
